test/busybox-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-1
  namespace: ns1 
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "1000"
    imagePullPolicy: IfNotPresent
    name: busybox-1
  nodeSelector:
    nodenum: "1"
