test/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: default
  labels:
    access: "true"
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "1000"
    imagePullPolicy: IfNotPresent
    name: busybox
