test/nginx-policy-kube.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: access-nginx-kube
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: nginx
  ingress:
    - from:
      - namespaceSelector: 
          matchLabels:
            namespace: kube-system
