test/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx 
  namespace: default
spec:
  replicas: 1
  template:
    metadata:	
       labels:
         run: "nginx"
    spec:
      containers:
      - image: docker.io/library/nginx
        name: nginx
